# ghbenchmarking

./: README.md  random_access.cpp  random_access_host.cpp  random_access_numa.cpp  run.sh  run_over_TS.sh  run_over_TS_2.sh
flops/: CMakeLists.txt
randomaccess/: random_access.cpp  random_access_numa.cpp  run_over_TS.sh
raytracer_bench/: raytracer  raytracer.cu
stream/: run.sh  run_over_TS.sh  stream-kokkos.cpp
